# despesas

./: .gitignore  .hgignore  .hgtags  Dockerfile  README.md  docker-compose.yml  package-lock.json  pom.xml
backup/: backup-01-02-2022.sql  backup-01-03-2022.sql  backup-01-05-2024.sql  backup-01-07-2023.sql  backup-01-10-2025.sql  backup-02-03-2026.sql  backup-02-04-2022.sql  backup-02-06-2023.sql  backup-02-07-2023.sql  backup-02-10-2021.sql  backup-02-12-2025.sql  backup-03-04-2025.sql  backup-03-05-2021.sql  backup-03-05-2024.sql  backup-03-06-2024.sql  backup-03-07-2022.sql  backup-03-09-2024.sql  backup-03-11-2023.sql  backup-03-12-2025.sql  backup-04-06-2024.sql  backup-04-07-2024.sql  backup-04-08-2022.sql  backup-04-08-2024.sql  backup-04-09-2021.sql  backup-04-12-2025.sql  backup-05-01-2024.sql  backup-05-03-2026.sql  backup-05-04-2023.sql  backup-05-06-2021.sql  backup-05-06-2024.sql  backup-05-09-2024.sql  backup-05-10-2023.sql  backup-05-10-2024.sql  backup-05-12-2025.sql  backup-06-03-2022.sql  backup-06-03-2026.sql  backup-06-07-2024.sql  backup-06-08-2023.sql  backup-06-09-2024.sql  backup-06-10-2023.sql  (+95 more)
dados/: Fatura20151011.xls  agossto.xls  agosto.xls  agosto_despesas.xls  agosto_receitas.xls  despesa_fevereiro_2016.xls  fatura_2016_01.xls  (+27 more)
despesas-ia/: .dockerignore  .gitignore  Dockerfile  README.md  pom.xml  pyproject.toml
despesas-ia/src/: main.py
despesas-ia/src/despesas_ia/api/: endpoints.py
despesas-ia/src/despesas_ia/converters/: base.py  imagem_converter.py  pdf_converter.py
despesas-ia/src/despesas_ia/services/: conversor_service.py
(+805 files in other folders)
